# partner-profit-system

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
docs/: V1.0-GitHub发布准备报告.md  V1.0-GitHub发布完成报告.md  V1.0-GitHub发布说明.md  V1.0-发布包清单.md  V1.0-发布确认报告.md  V1.0-定版说明.md  V1.0-需求覆盖矩阵.md  V1.1-后续规划.md  V1.1-桌面安装包构建报告.md  V1.1-桌面版打包说明.md  V1.1-桌面版数据迁移说明.md  V1.1-桌面离线版GUI与卸载重装验收报告.md  V1.1-桌面离线版架构设计.md  V1.1-桌面离线版脱敏数据闭环验收报告.md  V1.1.0-桌面离线正式版发布确认报告.md  V1.1.1-GUI人工导入导出补充记录.md  V1.1.1-安装包校验信息.md  V1.1.1-桌面修复版发布说明.md  V1.1.1-桌面版全系统自检与修复报告.md  V1.1.1-桌面版清除本地数据修复报告.md  V1.1.2-桌面版导入不显示专项修复报告.md  V1.1.3-桌面版全链路自检与修复报告.md  V1.1.3-桌面稳定修复版发布说明.md  V1.1.4-桌面版重复窗口与标题修复报告.md  V1.1.5-桌面版真实启动双窗口修复报告.md  V1.1.5-桌面真实双窗口修复版发布说明.md  V1.1.6-桌面图标更新报告.md
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_partner_profit_tables.sql
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/components/: AnnualDividendConfirmation.tsx  AppShell.tsx  ProfitCalculatorButton.tsx  ProfitCalculatorModal.tsx  common.tsx
src/domain/: calculation.test.ts  calculation.ts  profitCalculator.test.ts  profitCalculator.ts  types.ts  uiText.test.ts  validation.ts
src/pages/: AnnualSummaryPage.tsx  BackupPage.tsx  CapitalTransactionsPage.tsx  DashboardPage.tsx  DividendPaymentsPage.tsx  MemberDetailPage.tsx  MembersPage.tsx  MonthlySettlementPage.tsx  OperationLogsPage.tsx  ProfitCalculatorPage.tsx  SystemSettingsPage.tsx  pageTypes.ts
src/utils/: date.ts  (+6 more)
(+17 files in other folders)
